--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "6                BOL  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "851   255959  300186501                GER                ARG  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,11 +533,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 852 entries, 0 to 851\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   Year                  852 non-null    int64  \n",
+      " 1   Datetime              852 non-null    object \n",
+      " 2   Stage                 852 non-null    object \n",
+      " 3   Stadium               852 non-null    object \n",
+      " 4   City                  852 non-null    object \n",
+      " 5   Home Team Name        852 non-null    object \n",
+      " 6   Home Team Goals       852 non-null    int64  \n",
+      " 7   Away Team Goals       852 non-null    int64  \n",
+      " 8   Away Team Name        852 non-null    object \n",
+      " 9   Win conditions        852 non-null    object \n",
+      " 10  Attendance            850 non-null    float64\n",
+      " 11  Half-time Home Goals  852 non-null    int64  \n",
+      " 12  Half-time Away Goals  852 non-null    int64  \n",
+      " 13  Referee               852 non-null    object \n",
+      " 14  Assistant 1           852 non-null    object \n",
+      " 15  Assistant 2           852 non-null    object \n",
+      " 16  RoundID               852 non-null    int64  \n",
+      " 17  MatchID               852 non-null    int64  \n",
+      " 18  Home Team Initials    852 non-null    object \n",
+      " 19  Away Team Initials    852 non-null    object \n",
+      "dtypes: float64(1), int64(7), object(12)\n",
+      "memory usage: 133.2+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "df.info()"
    ]
   },
   {
@@ -549,11 +583,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(852, 20)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Displaying the shape of our dataframe\n",
+    "df.shape\n"
    ]
   },
   {
@@ -565,11 +611,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Year', 'Datetime', 'Stage', 'Stadium', 'City', 'Home Team Name',\n",
+       "       'Home Team Goals', 'Away Team Goals', 'Away Team Name',\n",
+       "       'Win conditions', 'Attendance', 'Half-time Home Goals',\n",
+       "       'Half-time Away Goals', 'Referee', 'Assistant 1', 'Assistant 2',\n",
+       "       'RoundID', 'MatchID', 'Home Team Initials', 'Away Team Initials'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Displaying the column names of our dataframe\n",
+    "df.columns"
    ]
   },
   {
@@ -590,11 +653,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Datetime</th>\n",
+       "      <th>Stage</th>\n",
+       "      <th>Stadium</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Home Team Name</th>\n",
+       "      <th>Home Team Goals</th>\n",
+       "      <th>Away Team Goals</th>\n",
+       "      <th>Away Team Name</th>\n",
+       "      <th>Win conditions</th>\n",
+       "      <th>Attendance</th>\n",
+       "      <th>Half-time Home Goals</th>\n",
+       "      <th>Half-time Away Goals</th>\n",
+       "      <th>Referee</th>\n",
+       "      <th>Assistant 1</th>\n",
+       "      <th>Assistant 2</th>\n",
+       "      <th>RoundID</th>\n",
+       "      <th>MatchID</th>\n",
+       "      <th>Home Team Initials</th>\n",
+       "      <th>Away Team Initials</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1930</td>\n",
+       "      <td>14 Jul 1930 - 12:45</td>\n",
+       "      <td>Group 2</td>\n",
+       "      <td>Parque Central</td>\n",
+       "      <td>Montevideo</td>\n",
+       "      <td>Yugoslavia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td></td>\n",
+       "      <td>24059.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TEJADA Anibal (URU)</td>\n",
+       "      <td>VALLARINO Ricardo (URU)</td>\n",
+       "      <td>BALWAY Thomas (FRA)</td>\n",
+       "      <td>201</td>\n",
+       "      <td>1093</td>\n",
+       "      <td>YUG</td>\n",
+       "      <td>BRA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1930</td>\n",
+       "      <td>14 Jul 1930 - 14:50</td>\n",
+       "      <td>Group 3</td>\n",
+       "      <td>Pocitos</td>\n",
+       "      <td>Montevideo</td>\n",
+       "      <td>Romania</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Peru</td>\n",
+       "      <td></td>\n",
+       "      <td>2549.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>WARNKEN Alberto (CHI)</td>\n",
+       "      <td>LANGENUS Jean (BEL)</td>\n",
+       "      <td>MATEUCCI Francisco (URU)</td>\n",
+       "      <td>201</td>\n",
+       "      <td>1098</td>\n",
+       "      <td>ROU</td>\n",
+       "      <td>PER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1930</td>\n",
+       "      <td>15 Jul 1930 - 16:00</td>\n",
+       "      <td>Group 1</td>\n",
+       "      <td>Parque Central</td>\n",
+       "      <td>Montevideo</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>France</td>\n",
+       "      <td></td>\n",
+       "      <td>23409.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>REGO Gilberto (BRA)</td>\n",
+       "      <td>SAUCEDO Ulises (BOL)</td>\n",
+       "      <td>RADULESCU Constantin (ROU)</td>\n",
+       "      <td>201</td>\n",
+       "      <td>1085</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>FRA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year              Datetime    Stage         Stadium         City  \\\n",
+       "2  1930  14 Jul 1930 - 12:45   Group 2  Parque Central  Montevideo    \n",
+       "3  1930  14 Jul 1930 - 14:50   Group 3         Pocitos  Montevideo    \n",
+       "4  1930  15 Jul 1930 - 16:00   Group 1  Parque Central  Montevideo    \n",
+       "\n",
+       "  Home Team Name  Home Team Goals  Away Team Goals Away Team Name  \\\n",
+       "2     Yugoslavia                2                1         Brazil   \n",
+       "3        Romania                3                1           Peru   \n",
+       "4      Argentina                1                0         France   \n",
+       "\n",
+       "  Win conditions  Attendance  Half-time Home Goals  Half-time Away Goals  \\\n",
+       "2                    24059.0                     2                     0   \n",
+       "3                     2549.0                     1                     0   \n",
+       "4                    23409.0                     0                     0   \n",
+       "\n",
+       "                 Referee              Assistant 1                 Assistant 2  \\\n",
+       "2    TEJADA Anibal (URU)  VALLARINO Ricardo (URU)         BALWAY Thomas (FRA)   \n",
+       "3  WARNKEN Alberto (CHI)      LANGENUS Jean (BEL)    MATEUCCI Francisco (URU)   \n",
+       "4    REGO Gilberto (BRA)     SAUCEDO Ulises (BOL)  RADULESCU Constantin (ROU)   \n",
+       "\n",
+       "   RoundID  MatchID Home Team Initials Away Team Initials  \n",
+       "2      201     1093                YUG                BRA  \n",
+       "3      201     1098                ROU                PER  \n",
+       "4      201     1085                ARG                FRA  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Displayion the 3rd to 5th game in the dataframe\n",
+    "df.iloc[2:5]"
    ]
   },
   {
@@ -606,11 +819,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Home Team Name</th>\n",
+       "      <th>Away Team Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>Mexico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Yugoslavia</td>\n",
+       "      <td>Bolivia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>Paraguay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>Peru</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Home Team Name Away Team Name\n",
+       "4      Argentina         France\n",
+       "5          Chile         Mexico\n",
+       "6     Yugoslavia        Bolivia\n",
+       "7            USA       Paraguay\n",
+       "8        Uruguay           Peru"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Displaying games 5 -9 and only the home team name and away team name columns\n",
+    "\n",
+    "df.iloc[4:9,[5,8]]"
    ]
   },
   {
